--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .background-slider {
-    /* background-image: url(./images/24_SUNSET_VIEW_-_FROM_SUNSET_BEACH.jpg.1366x768_q85_crop_upscale.webp); */
-    height: 100vh;
-    width: 80%;
+    background-image: url(./images/24_SUNSET_VIEW_-_FROM_SUNSET_BEACH.jpg.1366x768_q85_crop_upscale.webp);
+    height: 80vh;
+    width: 86%;
     transition: background-image 0.5s ease-in-out;
     background-size: cover;
     background-position: center;
-    /* margin: auto; */
+    margin: auto;
   }
 
 .boxes {
@@ -19,7 +19,6 @@
     width: 30%;
     padding: 10px;
     margin-top: -20%;
-    margin-left: 50px;
 }
 
 .left-box p {
@@ -33,20 +32,21 @@
     padding: 10px;
     margin-top: -20%;
     margin-left: auto;
-    margin-right: 2.75%;
 }
 
 .cards {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
     padding: 0;
+    margin: 0;
 }
 
 .card {
     background-color: #061C2C;
     color: #ffffff;
-    width: 24%;
+    width: 350px;
     margin: 10px;
     padding: 10px;
 }
@@ -64,16 +64,15 @@
     color: #ffffff;
     display: flex;
     flex-direction: row;
-    width: 11%;
+    width: 45%;
     margin: 10px;
     padding: 10px;
-    font-size: 13px;
+    font-size: 12px;
 }
 
 .card-2 img {
     height: 20px;
     margin-left: auto;
-    margin-top: 5px;
 }
 
 .text {
