--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .background-slider {
     background-image: url(./images/24_SUNSET_VIEW_-_FROM_SUNSET_BEACH.jpg.1366x768_q85_crop_upscale.webp);
     height: 80vh;
-    width: 86%;
+    width: 80%;
     transition: background-image 0.5s ease-in-out;
     background-size: cover;
     background-position: center;
@@ -34,16 +34,7 @@
     margin-left: auto;
 }
 
-.cards {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-.card {
+/* .card {
     background-color: #061C2C;
     color: #ffffff;
     width: 350px;
@@ -57,6 +48,15 @@
 
 .card img {
     height: 60px;
+}
+
+.cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 .card-2 {
@@ -75,13 +75,135 @@
     margin-left: auto;
 }
 
+.columns {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
 .text {
     width: 50%;
     font-size: 20px;
-    padding-right: 30px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 .icons {
     margin: 20px;
-    padding-top: 5px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .columns {
+        flex-direction: column;
+    }
+} */
+
+
+
+
+.card {
+    background-color: #061C2C;
+    color: #ffffff;
+    width: 350px;
+    margin: 10px;
+    padding: 10px;
+}
+
+.card h3 {
+    padding: 5px;
+}
+
+.card img {
+    height: 60px;
+}
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.cards-2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0;
+}
+
+.card-2 {
+    background-color: #244AC2;
+    color: #ffffff;
+    width: 39.5%;
+    margin: 10px;
+    padding: 10px;
+    font-size: 12px;
+}
+
+.card-2 img {
+    height: 20px;
+    margin-left: auto;
+}
+
+.columns {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.text {
+    width: 50%;
+    font-size: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.icons {
+    margin: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+@media (max-width: 768px) {
+    .columns {
+        flex-direction: column;
+    }
+
+    .cards,
+    .cards-2 {
+        padding: 0;
+    }
+
+    .card,
+    .card-2 {
+        width: 100%;
+        padding: 0;
+    }
+
+    .text {
+        width: 100%;
+        text-align: center;
+        /* font-size: 20px; */
+        padding: 10px;
+        box-sizing: border-box;
+    }
+
 }
