--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.main-section {
+    overflow: hidden;
+    font: sans-serif;
+}
+
 .navbar {
     display: flex;
     padding: 14px 0;
@@ -58,16 +63,17 @@
   }
 
   .carousel img {
-    max-width: 100%;
+    width: 100%;
     object-fit: cover;
   }
 
   .pagination {
     position: absolute;
-    top: 130px;
-    left: 78%;
+    bottom: 20px;
+    left: 85%;
     transform: translateX(-50%);
     display: flex;
+    justify-content: center;
   }
 
   .pagination button {
@@ -104,21 +110,42 @@
     margin-left: 100px;
 }
 
+.arrow{
+  position: relative;
+  left: 50%;
+  background-image: url('https://visiofund.co.za/wp-content/themes/visio/images/slider-next.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  max-height: 100%;
+  width: 60px;
+}
+
 .right-box {
+    position: relative;
+    z-index: -1;
+    /* left: 45%; */
     background-color: #000000;
-    height: 50px;
-    width: 10.65%;
-    padding: 10px;
+    color: #ffffff;
+    max-height: 100%;
+    width: 15%;
     margin-left: auto;
+    margin-right: 10px;
+}
+
+
+.box {
+    width: 33.33%;
+    margin: 5px;
 }
 
 
 .card {
     background-color: #061C2C;
     color: #ffffff;
-    width: 418px;
-    margin: 10px;
+    width: 94%;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 .card h3 {
@@ -129,25 +156,44 @@
     height: 60px;
 }
 
-.cards,
-.cards-2 {
+.cards {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 78%;
+    margin: auto;
 }
 
-
-.card-2 {
+.cards-2 {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.card-1 {
+    display: flex;
     padding: 0;
     background-color: #244AC2;
     color: #ffffff;
-    width: 41%;
-    margin: 10px;
+    width: 43%;
+    margin-right: 5px;
     padding: 10px;
-    font-size: 12px;
+    font-size: 10px;
+}
+
+.card-2 {
+    display: flex;
+    padding: 0;
+    background-color: #244AC2;
+    color: #ffffff;
+    width: 43%;
+    margin-left: 5px;
+    padding: 10px;
+    font-size: 10px;
+}
+
+.card-1 img {
+    height: 20px;
+    margin-left: auto;
 }
 
 .card-2 img {
@@ -157,11 +203,11 @@
 
 .columns {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: center;
-    width: 100%;
+    width: 78%;
     padding: 10px;
-    margin: 0;
+    margin: auto;
 }
 
 .text {
@@ -185,7 +231,7 @@
 @media (max-width: 1150px) {
     .boxes {
         position: absolute;
-        top: 50%;
+        top: 55%;
         width: 100%;
         display: flex;
     }
@@ -203,21 +249,22 @@
         margin-left: 10px;
     }
     
-    .right-box {
-        background-color: #000000;
-        height: 50px;
-        width: 10.65%;
-        padding: 10px;
-        margin-left: auto;
-    }
+    
 
+}
+
+@media (max-width: 1020px) {
+    .boxes {
+        top: 50%;
+    }
+    
 }
 
 
 @media (max-width: 950px) {
     .boxes {
         position: absolute;
-        top: 40%;
+        top: 45%;
         width: 100%;
         display: flex;
     }
@@ -231,7 +278,65 @@
     }
 }
 
+@media (max-width: 831px) {
+    .boxes {
+        font-size: 14px;
+    }
+
+    .arrow{
+        left: 48%;
+      }
+}
+
+@media (max-width: 750px) {
+    .boxes {
+        top: 40%;
+    }
+    
+}
+
+@media (max-width: 732px) {
+    .boxes {
+        font-size: 12px;
+    }
+
+    .arrow{
+        left: 45%;
+      }
+    
+}
+
 @media (max-width: 650px) {
+    .boxes {
+        position: absolute;
+        top: 35%;
+        width: 100%;
+        display: flex;
+    }
+
+    .left-box {
+        background-color: #244AC2;
+        color: #ffffff;
+        height: fit-content;
+        padding: 10px;
+    
+    }
+    
+    .left-box p {
+        margin-left: 0;
+    }
+    
+}
+
+@media (max-width: 600px) {
+    .boxes {
+        font-size: 11px;
+    }
+    
+}
+
+@media (max-width: 550px) {
+
     .boxes {
         position: absolute;
         top: 30%;
@@ -243,31 +348,30 @@
         background-color: #244AC2;
         color: #ffffff;
         height: fit-content;
-        /* width: 30%; */
         padding: 10px;
     
     }
     
     .left-box p {
         margin-left: 0;
+        font-size: 10px;
     }
-    
-    .right-box {
-        background-color: #000000;
-        width: 10.65%;
-        padding: 10px;
-        margin-left: auto;
+
+    .card {
+        width: 92.5%;
+    }
+
+    .card-2 {
+        width: 100%;
+        padding: 0;
+        margin: 0;
     }
 }
 
 @media (max-width: 500px) {
-    /* .pagination {
-        top: 17%;
-      } */
-
     .boxes {
         position: absolute;
-        top: 25%;
+        top: 27%;
         width: 100%;
         display: flex;
     }
@@ -283,43 +387,7 @@
     
     .left-box p {
         margin-left: 0;
-    }
-    
-    .right-box {
-        background-color: #000000;
-        width: 10.65%;
-        padding: 10px;
-        margin-left: auto;
-    }
-}
-
-@media (max-width: 480px) {
-    .boxes {
-        position: absolute;
-        top: 25%;
-        width: 100%;
-        display: flex;
-        opacity: 0;
-    }
-
-    .left-box {
-        background-color: #244AC2;
-        color: #ffffff;
-        height: fit-content;
-        /* width: 30%; */
-        padding: 10px;
-    
-    }
-    
-    .left-box p {
-        margin-left: 0;
-    }
-    
-    .right-box {
-        background-color: #000000;
-        width: 10.65%;
-        padding: 10px;
-        margin-left: auto;
+        font-size: 9px;
     }
 
     .cards {
@@ -327,44 +395,84 @@
         flex-direction: column;
     }
 
-    .card {
-        width: 400px;
+}
+
+ @media (max-width: 450px) {
+    .boxes {
+        top: 25%;
     }
 
-    .card-2 {
-        width: 400px;
+    .left-box p {
+        font-size: 7px;
+    }
+
+    .arrow{
+        left: 42%;
+    }
+
+    .right-box {
+        z-index: -1;
+        left: 1%;
+    }
+
+
+}
+
+@media (max-width: 400px) {
+    .boxes {
+        top: 22%;
+    }
+
+    .left-box p {
+        font-size: 7px;
     }
 
 }
 
-@media (max-width: 450px) {
-    .pagination {
-        opacity: 0;
+@media (max-width: 350px) {
+    .boxes {
+        top: 20%;
     }
 
-    .card {
-        width: 90%;
+    .left-box p {
+        font-size: 6px;
     }
 
-    .card-2 {
-        width: 90%;
+    .arrow{
+        left: 38%;
+    }
+
+}
+
+@media (max-width: 321px) {
+    .boxes {
+        top: 15%;
+    }
+
+    .left-box p {
+        font-size: 6px;
     }
 }
+
+
 
 @media (max-width: 992px) {
     .columns,
     .inside {
         flex-direction: column;
-        margin: 0px;
+        margin: auto;
     }
 
 
     .text {
         width: 100%;
         text-align: center;
-        /* font-size: 20px; */
-        padding: 10px;
         box-sizing: border-box;
+        padding: 0;
+    }
+
+    .text p {
+        margin: 0;
     }
 
     .icons {
@@ -377,4 +485,62 @@
         width: 100%;
     }
 
+    .cards-2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto;
+    }
+
+    .card-1 {
+        width: 98%;
+        height: fit-content;
+        padding: 5px;
+    }
+
+    .card-2 {
+        width: 98%;
+        margin-top: 5px;
+        margin-left: 0;
+        height: 10px;
+        padding: 5px;
+    }
+
+}
+
+@media (max-width: 792px) {
+    .cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 80%;
+        margin: auto;
+    }
+
+    .box {
+        width: 100%;
+        margin: auto;
+        margin-bottom: 10px;
+    }
+
+    .card-1 {
+        width: 95.5%;
+    }
+
+    .card-2 {
+        width: 95.5%;
+    }
+}
+
+@media (max-width: 1431px) {
+
+    .card-1 {
+        height: 20px;
+        padding-top: 15px;
+    }
+
+    .card-2 {
+        height: 20px;
+        padding-top: 15px;
+    }
 }
