--- a/style.css
+++ b/style.css
@@ -74,29 +74,33 @@
     object-fit: cover;
   }
 
-  .pagination {
+
+  .dots-container {
     position: absolute;
-    bottom: 20px;
-    left: 85%;
+    bottom: 100px;
+    left: 80%;
     transform: translateX(-50%);
     display: flex;
-    justify-content: center;
-  }
+    overflow: hidden;
+}
 
-  .pagination button {
-    background-color: #ccc;
-    border: none;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    margin: 0 5px;
-    cursor: pointer;
-  }
+.dot {
+    background-image: url('https://visiofund.co.za/wp-content/themes/visio/images/slider-dots.svg');
+    width: 22px;
+    height: 22px;
+    display: inline-block;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0 1px;
+    margin-bottom: 0px;
+}
 
-  .pagination button.active {
-    background-color: #333;
-  }
-  
+.active {
+    opacity: 0.40;
+    transform: rotate(160deg);
+}
+
 .boxes {
     position: absolute;
     top: 53vh;
