--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     margin: auto;
 }
 .navbar a img {
-    height: 40px;
+    height: 60px;
     margin: 5px 0;
 }
 .logo {
@@ -25,7 +25,7 @@
     .navbar {
         display: flex;
         padding: 14px 0;
-        margin: 0 3rem;
+        /* margin: 0 3rem; */
     }
 }
 @media screen and (max-width: 480px) {
@@ -77,7 +77,7 @@
 
   .dots-container {
     position: absolute;
-    bottom: 100px;
+    bottom: 20px;
     left: 80%;
     transform: translateX(-50%);
     display: flex;
@@ -483,7 +483,7 @@
     }
 
     .left-box p {
-        font-size: 6px;
+        font-size: 5px;
     }
 }
 
