--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@
 @media (max-width: 650px) {
     .boxes {
         position: absolute;
-        top: 27%;
+        top: 30%;
         width: 100%;
         display: flex;
     }
@@ -378,7 +378,7 @@
 
     .boxes {
         position: absolute;
-        top: 25%;
+        top: 27%;
         width: 100%;
         display: flex;
     }
@@ -407,10 +407,10 @@
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 501px) {
     .boxes {
         position: absolute;
-        top: 22%;
+        top: 25%;
         width: 100%;
         display: flex;
     }
@@ -434,6 +434,12 @@
         flex-direction: column;
     }
 
+}
+
+@media (max-width: 481px) {
+    .boxes {
+        top: 23%;
+    }
 }
 
  @media (max-width: 450px) {
